ms/k8s-minikube/13-poll-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-service
  namespace: vote-poll
  labels:
    app: poll-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-service
  template:
    metadata:
      labels:
        app: poll-service
    spec:
      containers:
        - name: poll-service
          image: poll-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 384Mi
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: vote-poll
spec:
  selector:
    app: poll-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
